Fix css style on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -173,4 +173,16 @@ footer {
 		padding: 8px;
 		font-size: 14px;
 	}
+
+	.social-links {
+		flex-wrap: wrap;
+		justify-content: center;
+		gap: 20px;
+	}
+
+	.social-link img {
+		width: 40px;
+		height: 40px;
+	}
+
 }
